--- a/cmake-init/templates/c/executable/CMakeLists.txt
+++ b/cmake-init/templates/c/executable/CMakeLists.txt
@@ -26,7 +26,10 @@ target_include_directories(
     "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/source>"
 )
 
-target_compile_features({= name =}_lib PUBLIC c_std_{= std =})
+target_compile_features({= name =}_lib PUBLIC c_std_{= std =}){% if pm %}
+
+find_package(json-c REQUIRED)
+target_link_libraries({= name =}_lib PRIVATE json-c::json-c){% end %}
 
 # ---- Declare executable ----
 
