--- a/cmake-init/templates/c/executable/CMakeLists.txt
+++ b/cmake-init/templates/c/executable/CMakeLists.txt
@@ -29,7 +29,16 @@ target_include_directories(
 target_compile_features({= name =}_lib PUBLIC c_std_{= std =}){% if pm %}
 
 find_package(json-c REQUIRED)
-target_link_libraries({= name =}_lib PRIVATE json-c::json-c){% end %}
+target_link_libraries({= name =}_lib PRIVATE json-c::json-c)
+
+find_path(HEDLEY_INCLUDE_DIR hedley.h)
+if(NOT HEDLEY_INCLUDE_DIR)
+  message(FATAL_ERROR "Couldn't find hedley.h (${HEDLEY_INCLUDE_DIR})")
+endif()
+target_include_directories(
+    {= name =}_lib SYSTEM
+    PRIVATE "${HEDLEY_INCLUDE_DIR}"
+){% end %}
 
 # ---- Declare executable ----
 
