Add a note to the code manually finding Hedley
Hedley does not support clients using CMake, so one has to manually
find_path() for the include directory containing the header.

--- a/cmake-init/templates/c/executable/CMakeLists.txt
+++ b/cmake-init/templates/c/executable/CMakeLists.txt
@@ -31,6 +31,8 @@ target_compile_features({= name =}_lib PUBLIC c_std_{= std =}){% if pm %}
 find_package(json-c REQUIRED)
 target_link_libraries({= name =}_lib PRIVATE json-c::json-c)
 
+# Unfortunately, hedley provides no CMake package to be found trivially using
+# find_package, so it has to be found manually
 find_path(HEDLEY_INCLUDE_DIR hedley.h)
 if(NOT HEDLEY_INCLUDE_DIR)
   message(FATAL_ERROR "Couldn't find hedley.h (${HEDLEY_INCLUDE_DIR})")
