--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
       with: { python-version: "3.8" }
 
     - name: Install dependencies
-      run: pip3 install conan
+      run: pip3 install "conan<2"
         && conan profile new default --detect
         && conan profile update settings.compiler.libcxx=libstdc++11 default
         && conan install . -b missing{% elif vcpkg %}
@@ -96,7 +96,7 @@ jobs:
       with: { python-version: "3.8" }
 
     - name: Install dependencies
-      run: pip3 install conan
+      run: pip3 install "conan<2"
         && conan profile new default --detect
         && cp .github/clang-12.profile ~/.conan/profiles/default
         && conan install . -b missing{% elif vcpkg %}
@@ -152,7 +152,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        pip3 install conan
+        pip3 install "conan<2"
         conan profile new default --detect
         if [ ${{ matrix.os }} = ubuntu-latest ]; then
           conan profile update settings.compiler.libcxx=libstdc++11 default
