--- a/cmake-init/templates/c/executable/CMakeLists.txt
+++ b/cmake-init/templates/c/executable/CMakeLists.txt
@@ -47,11 +47,7 @@ target_include_directories(
 add_executable({= name =}_exe source/main.c)
 add_executable({= name =}::exe ALIAS {= name =}_exe)
 
-set_target_properties(
-    {= name =}_exe PROPERTIES
-    OUTPUT_NAME {= name =}
-    EXPORT_NAME exe
-)
+set_property(TARGET {= name =}_exe PROPERTY OUTPUT_NAME {= name =})
 
 target_compile_features({= name =}_exe PRIVATE c_std_{= std =})
 
