--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -143,7 +143,12 @@ jobs:
 
     - name: Install static analyzers
       if: matrix.os == 'ubuntu-latest'
-      run: sudo apt-get install clang-tidy cppcheck -y -q{% if conan %}
+      run: >-
+        sudo apt-get install clang-tidy-12 cppcheck -y -q
+
+        sudo update-alternatives --install
+        /usr/bin/clang-tidy clang-tidy
+        /usr/bin/clang-tidy-12 120{% if conan %}
 
     - name: Install Python
       uses: actions/setup-python@v4
