--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
         pm: [none, conan, vcpkg]
 
-        os: [macos-latest, ubuntu-latest, windows-2022]
+        os: [macos-12, ubuntu-22.04, windows-2022]
 
         include:
         - { job: 1, type: "-s --examples", name: "Library (C++): shared", flag: "-D BUILD_SHARED_LIBS=YES" }
@@ -60,7 +60,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install static analyzers
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os == 'ubuntu-22.04'
       run: >-
         sudo apt-get install clang-tidy-12 cppcheck -y -q
 
@@ -83,7 +83,7 @@ jobs:
         python ../cmake-init.pyz --vcpkg headeronly -h
 
     - name: Lint generated project
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os == 'ubuntu-22.04'
       working-directory: proj
       run: cmake -D FORMAT_COMMAND=clang-format-12 -P cmake/lint.cmake
 
@@ -94,7 +94,7 @@ jobs:
       run: |
         pip3 install "conan<2"
         conan profile new default --detect
-        if [ ${{ matrix.os }} = ubuntu-latest ]; then
+        if [ ${{ matrix.os }} = ubuntu-22.04 ]; then
           conan profile update settings.compiler.libcxx=libstdc++11 default
         fi
         conan install . -b missing
