Use MultiToolTask for VS generators
The MultiToolTask is supposed to enable better parallel builds when
using MSBuild via the VS generators.

https://learn.microsoft.com/en-us/visualstudio/msbuild/multitooltask-task

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,12 @@ jobs:
       working-directory: proj
       run: cmake -D FORMAT_COMMAND=clang-format-14 -P cmake/lint.cmake
 
+    - name: Setup MultiToolTask
+      if: matrix.os == 'windows-2022'
+      run: |
+        Add-Content "$env:GITHUB_ENV" 'UseMultiToolTask=true'
+        Add-Content "$env:GITHUB_ENV" 'EnforceProcessCountAcrossBuilds=true'
+
     - name: Install Conan
       if: matrix.pm == 'conan'
       working-directory: proj
