Install pkg-config on Mac for vcpkg
vcpkg requires pkg-config for fixing up .pc files of its dependencies.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,6 +105,10 @@ jobs:
         fi
         conan install . -b missing
 
+    - name: Install pkg-config
+      if: matrix.pm == 'vcpkg' && matrix.os == 'macos-12'
+      run: brew install pkg-config
+
     - name: Install vcpkg
       if: matrix.pm == 'vcpkg'
       uses: friendlyanon/setup-vcpkg@v1
