--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -166,6 +166,10 @@ jobs:
         fi
         conan install . -b missing{% elif vcpkg %}
 
+    - name: Install pkg-config
+      if: matrix.os == 'macos-12'
+      run: brew install pkg-config
+
     - name: Install vcpkg
       uses: friendlyanon/setup-vcpkg@v1
       with: { committish: "${{ env.VCPKG_COMMIT }}" }{% end %}
