Address deprecation of `set-output` command
https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Get version
       id: version
-      run: echo "::set-output name=version::$(python cmake-init.pyz --version)"
+      run: echo "version=$(python cmake-init.pyz --version)" >> $GITHUB_OUTPUT
 
     - name: Release
       uses: softprops/action-gh-release@v1
