--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -57,9 +57,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip3 install "conan<2"
-        conan profile new default --detect
-        conan profile update settings.compiler.libcxx=libstdc++11 default
+        pip3 install conan
+        bash < .github/scripts/conan-profile.sh
         conan install . -b missing{% elif vcpkg %}
 
     - name: Install vcpkg
@@ -89,6 +88,8 @@ jobs:
 
     runs-on: ubuntu-22.04
 
+    env: { C{% if c %}C{% else %}XX{% end %}: clang{% if cpp %}++{% end %}-14{% if c and pm %}, CXX: clang++-14{% end %} }
+
     steps:
     - uses: actions/checkout@v3{% if conan %}
 
@@ -98,9 +99,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip3 install "conan<2"
-        conan profile new default
-        cp .github/clang-14.profile "$(conan config home)/profiles/default"
+        pip3 install conan
+        bash < .github/scripts/conan-profile.sh
         conan install . -b missing{% elif vcpkg %}
 
     - name: Install vcpkg
@@ -108,7 +108,6 @@ jobs:
       with: { committish: "${{ env.VCPKG_COMMIT }}" }{% end %}
 
     - name: Configure
-      env: { C{% if c %}C{% else %}XX{% end %}: clang{% if cpp %}++{% end %}-14{% if c and pm %}, CXX: clang++-14{% end %} }
       run: cmake --preset=ci-sanitize
 
     - name: Build
@@ -159,11 +158,8 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        pip3 install "conan<2"
-        conan profile new default --detect
-        if [ ${{ matrix.os }} = ubuntu-22.04 ]; then
-          conan profile update settings.compiler.libcxx=libstdc++11 default
-        fi
+        pip3 install conan
+        bash < .github/scripts/conan-profile.sh
         conan install . -b missing{% elif vcpkg %}
 
     - name: Install pkg-config
