Ignore the funny .DS_Store file via .gitignore

--- a/cmake-init/templates/common/.gitignore
+++ b/cmake-init/templates/common/.gitignore
@@ -6,6 +6,7 @@ cmake/open-cpp-coverage.cmake
 cmake-build-*/{% if conan %}
 conan/{% end %}
 prefix/
+.DS_Store
 CMakeLists.txt.user
 CMakeUserPresets.json{% if conan %}
 conanbuildinfo.txt
