Refine the generated projects' .gitignore file
Commit 70129b3 (Ignore the funny .DS_Store file via .gitignore) added
the .DS_Store file only at the top level.

Commit ad87aaf (Remove OpenCppCoverage integration example) forgot to
remove the corresponding line.

Conan no longer generates the files ignored by the removed lines.

--- a/cmake-init/templates/common/.gitignore
+++ b/cmake-init/templates/common/.gitignore
@@ -2,13 +2,9 @@
 .vs/
 .vscode/
 build/
-cmake/open-cpp-coverage.cmake
 cmake-build-*/{% if conan %}
 conan/{% end %}
 prefix/
-.DS_Store
+**/.DS_Store
 CMakeLists.txt.user
-CMakeUserPresets.json{% if conan %}
-conanbuildinfo.txt
-conaninfo.txt
-graph_info.json{% end %}
+CMakeUserPresets.json
