Get rid of windows-set-path.cmake
This kind of code doesn't really belong in CMake project code and
instead the developer is made aware via HACKING.md how to properly do
things on Windows by modifying the PATH environment variable.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,7 +116,7 @@ jobs:
         ${{ matrix.flag }}
 
     - name: Setup PATH
-      if: matrix.os == 'windows-2022' && matrix.pm != 'none'
+      if: matrix.os == 'windows-2022'
       run: Add-Content "$env:GITHUB_PATH" "$(Get-Location)\proj\build\Release"
 
     - name: Build
