--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -175,11 +175,11 @@ jobs:
     - name: Configure
       shell: pwsh
       run: cmake "--preset=ci-$("${{ matrix.os }}".split("-")[0])"{% if lib %}
-        -D BUILD_SHARED_LIBS=${{ matrix.shared }}{% if pm %}
+        -D BUILD_SHARED_LIBS=${{ matrix.shared }}
 
     - name: Setup PATH
       if: matrix.os == 'windows-2022' && matrix.type == 'shared'
-      run: Add-Content "$env:GITHUB_PATH" "$(Get-Location)\build\Release"{% end %}{% end %}
+      run: Add-Content "$env:GITHUB_PATH" "$(Get-Location)\build\Release"{% end %}
 
     - name: Build
       run: cmake --build build --config Release -j 2
